--- a/middleware/package.json
+++ b/middleware/package.json
@@ -22,38 +22,40 @@
   },
   "homepage": "https://github.com/dark-matter08/real-time-socket#readme",
   "devDependencies": {
-    "@babel/core": "^7.21.0",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-typescript": "^7.21.0",
-    "@types/jest": "^29.4.0",
-    "@types/node": "^18.14.2",
-    "@typescript-eslint/parser": "^5.54.0",
-    "babel-jest": "^29.4.3",
-    "jest": "^29.4.3",
-    "nodemon": "^2.0.20",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "@babel/core": "^7.24.0",
+    "@babel/preset-env": "^7.24.0",
+    "@babel/preset-typescript": "^7.23.3",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.11.26",
+    "@typescript-eslint/parser": "^7.2.0",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.2"
   },
   "dependencies": {
     "@directus/sdk": "^15.0.3",
-    "@types/swagger-ui-express": "^4.1.3",
-    "@typescript-eslint/eslint-plugin": "^5.54.0",
-    "axios": "^1.3.4",
+    "@directus/tsconfig": "^1.0.1",
+    "@types/swagger-ui-express": "^4.1.6",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
-    "date-fns": "^2.29.3",
-    "dotenv": "^16.0.3",
-    "eslint": "^8.35.0",
-    "eslint-plugin-typescript-sort-keys": "^2.1.0",
-    "eslint-plugin-unused-imports": "^2.0.0",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
-    "liquidjs": "^10.8.3",
-    "nodemailer": "^6.9.3",
+    "cors": "^2.8.5",
+    "date-fns": "^3.4.0",
+    "dotenv": "^16.4.5",
+    "eslint": "^8.57.0",
+    "eslint-plugin-typescript-sort-keys": "^3.2.0",
+    "eslint-plugin-unused-imports": "^3.1.0",
+    "express": "^4.18.3",
+    "jsonwebtoken": "^9.0.2",
+    "liquidjs": "^10.10.1",
+    "nodemailer": "^6.9.12",
     "otp-generator": "^4.0.1",
-    "prettier": "^2.8.4",
-    "swagger-ui-express": "^4.6.2",
-    "tsoa": "^5.1.1",
-    "uuid": "^9.0.0"
+    "prettier": "^3.2.5",
+    "swagger-ui-express": "^5.0.0",
+    "tsoa": "^6.1.4",
+    "uuid": "^9.0.1"
   },
   "private": false
 }
