--- a/middleware/tsconfig.json
+++ b/middleware/tsconfig.json
@@ -1,4 +1,5 @@
 {
+    "extends": "@directus/tsconfig/node18-cjs",
     "compilerOptions": {
         "experimentalDecorators": true,
         "target": "es6",
