--- a/middleware/package.json
+++ b/middleware/package.json
@@ -50,6 +50,7 @@
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
     "liquidjs": "^10.10.1",
+    "morgan": "^1.10.0",
     "nodemailer": "^6.9.12",
     "otp-generator": "^4.0.1",
     "prettier": "^3.2.5",
