--- a/directus/schema/snapshot.yaml
+++ b/directus/schema/snapshot.yaml
@@ -546,6 +546,46 @@ fields:
       validation: null
       validation_message: null
       width: full
+  - collection: Room
+    field: createdBy
+    type: integer
+    meta:
+      collection: Room
+      conditions: null
+      display: null
+      display_options: null
+      field: createdBy
+      group: null
+      hidden: false
+      interface: select-dropdown-m2o
+      note: null
+      options:
+        template: '{{name}}'
+      readonly: false
+      required: false
+      sort: 5
+      special:
+        - m2o
+      translations: null
+      validation: null
+      validation_message: null
+      width: full
+    schema:
+      name: createdBy
+      table: Room
+      data_type: integer
+      default_value: null
+      max_length: null
+      numeric_precision: 32
+      numeric_scale: 0
+      is_nullable: true
+      is_unique: false
+      is_primary_key: false
+      is_generated: false
+      generation_expression: null
+      has_auto_increment: false
+      foreign_key_table: Users
+      foreign_key_column: id
   - collection: Room_Users
     field: id
     type: integer
@@ -1086,6 +1126,27 @@ relations:
       constraint_name: message_room_foreign
       on_update: NO ACTION
       on_delete: NO ACTION
+  - collection: Room
+    field: createdBy
+    related_collection: Users
+    meta:
+      junction_field: null
+      many_collection: Room
+      many_field: createdBy
+      one_allowed_collections: null
+      one_collection: Users
+      one_collection_field: null
+      one_deselect_action: nullify
+      one_field: null
+      sort_field: null
+    schema:
+      table: Room
+      column: createdBy
+      foreign_key_table: Users
+      foreign_key_column: id
+      constraint_name: room_createdby_foreign
+      on_update: NO ACTION
+      on_delete: SET NULL
   - collection: Room_Users
     field: Users_id
     related_collection: Users
